# archibald

./: .gitignore  Cargo.toml  Code_Breakdown.md  Dataflow.md  README.md
.github/workflows/: release.yml
config/: archibald.toml
orders/: archibald.toml
src/: archibald_handler.rs  main.rs  server.rs  settings.rs
src/http/: arch_requests.rs  arch_response.rs  errors.rs  logging.rs  methods.rs  mod.rs  path_grammar.pest  query_string.rs  query_string_grammar.pest  requests.rs  response.rs  statuscodes.rs  validation.rs  validation2.rs
static_content/: 400.html  index.html  script.js  style.css
static_content/img/: test.txt
testserver/: Cargo.toml
testserver/src/: lib.rs
