[package]
name = "archibald"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
regex = "1.9.1"

serde = {version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.171"
toml = "0.5.10"
config = "0.12"
simplelog = "0.12.1"
